--- a/web-principal Admin/web-principal & Admin/bysomeone.html
+++ b/web-principal Admin/web-principal & Admin/bysomeone.html
@@ -138,7 +138,7 @@
   
     <div id="wrapper">
       <div id="pricing-tables">
-        <div class="pricing-table">
+        <div class="pricing-table" style="margin-left: 15%;">
           <div class="header">
            
            
